--- a/personalWebpageStyle.css
+++ b/personalWebpageStyle.css
@@ -1,37 +1,10 @@
-.header-class{
+.name{
   text-align: center;
   font-family: Roboto Mono;
   font-size: 60px;
   margin-bottom: 75px;
   width: 50%;
   margin-left: 25%;
-}
-
-.body-class {
-  width: 80%;
-  margin-left: 10%;
-}
-
-ul{
-  list-style-type: none;
-}
-.sn a:link {
-  text-decoration: none;
-  color: white;
-  
-}
-.sn a:visited {
-  text-decoration: none;
-  color: white;
-}
-.sn a:hover {
-  color: rgb(102,102,255);
-}
-
-#right-side{
-  position: absolute;
-  right: 0px;
-  width: 75%;
 }
 
 p {
@@ -46,50 +19,6 @@ p {
 h2 {
   text-align: center;
   margin-bottom: 25px;
-}
-
-img {
-  display: block;
-  margin: auto;
-  margin-bottom: 35px;
-}
-
-
-#social-media {
-  font-size: 50px;
-  text-align: center;
-  border-radius: 50%;
-  
-}
-.fa-github {
-  
-  color: black;
-  text-decoration:  none;
-}
-.fa-twitter {
-  
-  color: #55ACEE;
-  text-decoration:  none;
-}
-.fa-linkedin {
-  
-  color: #007bb5;
-  text-decoration:  none;
-}
-a:link {
-  text-decoration: none;
-}
-
-.social_media_sidebar {
-  text-align: center;
-  position: fixed;
-  bottom: 0;
-  margin-left:5%;
-  
-}
-
-.side_nav_content {
-  height: 25%;
 }
 
 #project-link {
@@ -109,15 +38,16 @@ a:link {
   margin-right: 10%; 
 }
 
-.body-links a:link {
+a:link {
   text-decoration: none;
   color: rgb(102,102,255); 
 }
 
-.body-links a:hover{
-  color: rgb(255,102,102);
+a:visited {
+  text-decoration: none;
+  color: rgb(102,102,255);
 }
 
-.body-links a:visited {
-  text-decoration: white;
+a:hover{
+  color: rgb(255,102,102);
 }
